--- a/fr.po
+++ b/fr.po
@@ -477,7 +477,7 @@ msgid ""
 "Hi Boss! A friend of mine is greatly involved in an organization which aims to get more women into technology. They are looking for a sponsor and I thought that this would be a perfect opportunity for us.\n"
 "Would you like to help out?"
 msgstr ""
-"Salut Patron ! J'ai un ami qui travaille dans une organisation dont le but "
+"Salut Patron ! J'ai un ami qui travaille dans une association dont le but "
 "est de féminiser la profession. Ils cherchent un sponsor et je me suis dit "
 "que ce serait une excellente opportunité.\n"
 "Voulez-vous leur proposer notre aide ?"
@@ -2647,7 +2647,7 @@ msgstr ""
 "capacité à créer de nouveaux jeux et à développer de nouveaux projets."
 
 msgid "Own Convention"
-msgstr "Notre propre convention"
+msgstr "Notre convention"
 
 msgid "It's all well and good to have a booth at the yearly game convention and show off our products but with our large fan base we should consider staging our very own convention instead!"
 msgstr ""
@@ -5488,7 +5488,7 @@ msgstr "Mise en abyme"
 
 #. achievement, inception
 msgid "Develop the game within the game."
-msgstr "Développe le jeu dans le jeu."
+msgstr "Développez le jeu dans le jeu."
 
 msgid "Fan"
 msgstr "Fan"
@@ -5741,7 +5741,7 @@ msgstr ""
 msgid "For fans of the mBox, the long wait for an update to the console will soon be over as Mirconoft has announced that the mBox One will be available {0}."
 msgstr ""
 "Pour les fans de la mBox, la longue attente pour une amélioration de la "
-"console sera bientôt terminé vu que Mirconoft a annoncé que la mBox One sera "
+"console sera bientôt terminée vu que Mirconoft a annoncé que la mBox One sera "
 "bientôt disponible."
 
 msgid "The new console is marketed as a unified entertainment platform and comes with voice control and a camera which is always watching to enable gesture control. A camera which is always on is not the only controversial feature as the new console also seems to require internet access at least once a day to function properly, does not support previous mBox games and seems to place restrictions on how games can be shared or resold.{n}Clearly, Mirconoft wants to push the current status quo and deliver a console for a new future of gaming but we are not sure if players will share Micronoft's vision."
@@ -5751,8 +5751,8 @@ msgstr ""
 "fonctionnant en permanence. Cette camera toujours active n'est pas la seule "
 "caractéristique faisant polémique puisque cette nouvelle console semble "
 "nécessiter une connexion en ligne quotidienne pour fonctionner correctement. "
-"De plus, elle ne permet pas de réutiliser les jeux de la précédent mBox et "
-"semble avoir compromettre et restreindre le marché de l'occasion.{n} Il est "
+"De plus, elle ne permet pas de réutiliser les jeux de la précédente mBox et "
+"semble compromettre et restreindre le marché de l'occasion.{n} Il est "
 "clair que Mirconoft veut établir un statu quo et amener le futur des "
 "consoles dans une direction que tous ne partageront peut-être pas."
 
@@ -5764,8 +5764,8 @@ msgstr ""
 "tant attendu, la Playsystem 4, le {0}. Cette nouvelle console semble pouvoir "
 "faire tout ce que faisait la Playsystem 3, mais en mieux.{n}Contrairement à "
 "la  mBox One, la Playsystem 4 ne requiert pas une connexion permanente et "
-"semble avoir une communauté bien plus sympathique. Nous pensons qu'il y'a "
-"peu de risques que les fans de Vonny soient déçu"
+"semble avoir une communauté bien plus sympathique. Nous pensons qu'il y a "
+"peu de risques que les fans de Vonny soient déçus"
 
 msgid "Vonny and {0}"
 msgstr "Vonny et {0}"
@@ -6114,17 +6114,17 @@ msgid "I don't know"
 msgstr "Je ne sais pas"
 
 msgid "positive"
-msgstr "positif"
+msgstr "positivement"
 
 msgid "mixed"
-msgstr "mélangé"
+msgstr "moyennement"
 
 msgid "Old Engine"
 msgstr "Vieux moteur"
 
 msgid "Boss, our recent decision to {0} our engine {1} was met with {2} responses from fans. Overall we {3} fans and {4}."
 msgstr ""
-"Patron, notre décision de {0} notre moteur {1} a été {2} accueilli par nos "
+"Patron, notre décision de {0} notre moteur {1} a été {2} accueillie par nos "
 "fans. Nous avons {3} fans et {4}."
 
 msgid "lost"
@@ -6345,9 +6345,9 @@ msgid ""
 msgstr ""
 "Patron, un petit groupe de fans a demandé à ce qu'on leur laisse les sources "
 "de notre ancien moteur, \"{0}\". Si on le faisait les fans seraient heureux, "
-"mais on a travaillait dur sur ce moteur.. on pourrait aussi leur vendre la "
+"mais on a travaillé dur sur ce moteur.. on pourrait aussi leur vendre la "
 "licence et se faire de l'argent. Sinon, on peut simplement refuser "
-"entièrement leur demande.\n"
+"complètement leur demande.\n"
 "Que voulez-vous faire ?"
 
 msgid ""
@@ -6372,7 +6372,7 @@ msgstr ""
 "dit ce joueur: \"Des fois, on veut juste jouer à quelque chose d'unique. Un "
 "jeu différent de l'adage du jeu Militaire/FPS ou Fantaisie/RPG pour ne "
 "nommer que ces exemples.\n"
-"J'espère que les développeurs font faire de tels jeux bientôt. J'en "
+"J'espère que les développeurs vont faire de tels jeux bientôt. J'en "
 "achèterai à coup sûr !\"{n}Cette tendance promet d'amener un bon défi aux "
 "développeurs peu originaux dans leurs idées.\n"
 "On risque de voir un peu plus d'idée originales."
@@ -6400,7 +6400,7 @@ msgid ""
 "Just as the industry seems to have silently accepted the slow demise of PC gaming as more and more games are primarily developed for consoles, there seems to be a resurgence of the PC market.{n}New powerful and affordable hardware, a growing indie-developer scene and the rise of crowd-funded financing has meant a slew of new exciting projects hitting the PC market.\n"
 "It seems that the PC market will only grow stronger in the coming years.{n}For console lovers, this isn't bad news either as many PC games are also ported to the most successful consoles."
 msgstr ""
-"Juste au moment ou l'industrie semble avoir silencieusement accepter la mort "
+"Juste au moment où l'industrie semble avoir silencieusement accepté la mort "
 "lente du jeu sur PC et que de plus en plus de jeux sont principalement "
 "développés pour les consoles, il semble y avoir une résurgence du marché du "
 "Personal Computer. {n} Nouveau matériel puissant et abordable, une scène "
@@ -6537,7 +6537,7 @@ msgid "Loading ..."
 msgstr "Chargement ..."
 
 msgid "Unlock hints?"
-msgstr "Déverrouiller les conseils ?"
+msgstr "Conseils"
 
 msgid " fans"
 msgstr " fans"
